--- a/page.html
+++ b/page.html
@@ -1,5 +1,14 @@
 <html>
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8JRHTW9H5D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8JRHTW9H5D');
+</script>
 <title>My Second Page</title>
 </head>
 <body>
