--- a/home.html
+++ b/home.html
@@ -12,6 +12,6 @@
 <title>HomePage</title>
 </head>
 <body>
-  Hello Google Analytics
+  Hello Google Analytics. Second <a href="page.html">Home</a>.
 </body>
 </html>
