--- a/home.html
+++ b/home.html
@@ -12,6 +12,8 @@
 <title>HomePage</title>
 </head>
 <body>
-  Hello Google Analytics. Go to <a href="page.html">Second</a>.
+  Hello Google Analytics. Go to <a href="page.html">Second</a>.<br/>
+<a href="https://instagram.com/">Instagram</a><br/>
+<a href="https:www.google.com/">Google</a>
 </body>
 </html>
