--- a/home.html
+++ b/home.html
@@ -17,6 +17,6 @@
 <a href="https://www.google.com/">Google</a>
 
 <br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/hyJtGlvVzDQ?si=aNe4IEp0UTae52gV&enablej=sapi1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hyJtGlvVzDQ?si=aNe4IEp0UTae52gV&enablejsapi=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
